manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-argo-web-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: test-argo-web.example.com # เปลี่ยนเป็นโดเมนของคุณ
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: test-argo-web-service
                port:
                  number: 80
